[libtaskmanager/x11] Fix transient windows bug

The logic for handling the active window when it is a transient, added in
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/509, had
a bug (fixed in 67003f740888fa9d1bcee60cd28ce9a862d2452a).

This reworks the implementation and actually makes the original feature work
(a signal also wasn't properly handled).

BUG: 438222
FIXED-IN: 5.22.1


(cherry picked from commit 7573ae03acc3f3c6d70af24970e689414a4204c5)